# parsers

./: .gitmodules  excscope-parser.js
monad-parser/: Lambda.hs  Main.hs  Parse.hs  Pretty.hs  monParse.hs  parser.cabal  stack.yaml
monad-parser/sandbox/: sandbox.tex
shred/: .gitignore  shred.cabal  stack-base.yaml  stack.yaml
shred/app/: all.js  index.html  out.js  out.stats
shred/src/: Cyto.hs  JSUtils.hs  Lambda.hs  Lexicon.hs  Main.hs  Parse.hs  Pretty.hs  Repl.hs
