name:                parser
version:             0.1.0.0
license:             MIT
author:              Dylan Bumford
maintainer:          dbumford@gmail.com
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10


library
  hs-source-dirs:      .
  exposed-modules:
      Lambda
    , Parse
    , Pretty

  build-depends:
      base          >= 4.6   && <4.9
    , mtl
    , transformers
    , bound
    , prelude-extras
  default-language:    Haskell2010


executable parser
  other-modules:
      Lambda
    , Parse
    , Pretty
  build-depends:       
      parser
    , base          >= 4.6   && <4.9
    , mtl
    , transformers
    , bound
    , prelude-extras

  default-language:    Haskell2010
  hs-source-dirs:      .
  main-is:             Main.hs
