name:                shred
version:             0.1.0.0
license:             MIT
author:              Dylan Bumford
maintainer:          dbumford@gmail.com
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10


-- library
--   hs-source-dirs:      src
--   exposed-modules:
--       Lambda
--     , Parse
--     , Pretty
--     , Repl
--     , Lexicon
--
--   build-depends:
--       base          >= 4.6   && <5
--     , mtl
--     , transformers
--     , bound
--     , prelude-extras
--     , repline
--     , pretty
--     , text
--     , containers
--
--   default-language:    Haskell2010


executable shred
  other-modules:
      Lambda
    , Parse
    , Pretty
    , Lexicon
    , JSUtils

  build-depends:       
      base          >= 4.6   && <5
    , mtl
    , transformers
    , bound
    , prelude-extras
    , repline
    , pretty
    , text
    , containers
    , pretty-tree
    , ghcjs-base
    , ghcjs-dom
    , reflex
    , reflex-dom
    , keycode
    

  default-language:    Haskell2010
  hs-source-dirs:      src
  main-is:             Main.hs
